# devit

./: .env.example  .gitignore  ALLOYDB_SETUP.md  DATABASE_SETUP.md  DEPLOYMENT.md  DNS_CONFIGURATION.md  GCP_DEPLOYMENT.md  GCP_IMPLEMENTATION_COMPLETE.md  GCP_MYSQL_DEPLOYMENT.md  GCP_QUICK_DEPLOY.md  GCP_SETUP_GUIDE.md  PROJECT_STATUS.md  README.md  SERVERSETUP.txt  cloudbuild.yaml  deploy-gcp-fixed.ps1  deploy-gcp.ps1  deploy-gcp.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  setup-database.bat
backend/: Cargo.toml  Dockerfile  Dockerfile.gcp  connect-alloydb.ps1  connect-clean.ps1  connect-simple.ps1  docker-compose.dev.yml  generate-sqlx-data.ps1  setup-alloydb-connection.ps1  setup-sqlx-cache.ps1
backend/migrations/: 001_initial.sql  001_initial_mysql.sql  002_complete_schema.sql
backend/simple-auth-test/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/handlers/: auth.rs  health.rs  issues.rs  mod.rs  pull_requests.rs  repositories.rs  users.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
backend/src/models/: issue.rs  mod.rs  pull_request.rs  repository.rs  user.rs
backend/src/services/: auth_service.rs  issue_service.rs  mod.rs  pull_requests_service.rs  repository_service.rs  user_service.rs
backend/src/utils/: jwt.rs  mod.rs  response.rs  validation.rs
docs/: DEVELOPMENT.md
frontend/: .eslintrc.json  .prettierrc  Dockerfile  Dockerfile.gcp  next.config.js  package.json  tailwind.config.js  tsconfig.json
mock-backend/: package.json
scripts/: backup.sh  deploy-backend.sh  deploy-complete-gcp.sh  deploy-complete.sh  deploy.sh  (+6 more)
(+45 files in other folders)
